# brightness

./: .travis.yml  AUTHORS  README.md  com.github.panosx2.brightness.yml  copyright  meson.build
data/: com.github.panosx2.brightness.appdata.xml  com.github.panosx2.brightness.appdata.xml.in  com.github.panosx2.brightness.desktop  com.github.panosx2.brightness.desktop.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.panosx2.brightness.pot  fr.po  pl.po  pt.po
src/: Brightness.vala  Dimmer.vala  Indicator.vala
src/Widgets/: DisplayWidget.vala
